<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PushPin</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	
    <string-array name="pusharr">
        <item>Select option</item>
        <item>Logout</item>
        <item>About Us</item>
        <item>Instructions</item>
        <item>Add Friends</item>
        <item>List Friends</item>
    </string-array>
    <string name="background_section">Background</string>
    <string name="whoarewe_section">Who are we?</string>
    <string name="act1">spinner</string>
    <string name="act2">aboutus</string>
    <string name="aboutus_title">About Us</string>
    <string name="aboutus">\nPushPin is an application created by a group of students in a cloud class at TCNJ. It was used primarily as a learning experience for Android.</string>
    <string name="aboutus2">\nThe Creators are: Sean Safari, Eddie Spencer, Eric Palace, Jared Milburn, Marty Drag, and  Daniel Cahill.</string>
    <string name="emessage">Enter a Message</string>
    <string name="acc">Enter your account name</string>
    <string name="pass">Enter your Password</string>
    <string name="cpass">Confirm your password</string>
    <string name="acc2">Enter your account name</string>
    <string name="pass2">Enter your password</string>
    <string name="done_button">Done</string>
    <string name="about_description">About the Pushpin project</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions">Use the drop down menu to add friends. To add a friend, enter their email address.\n\nTo push a pin, select \"PushPin\" button, enter the text you want to display, and press \"OK\". \n \n When you add a new friend, a verification email will be sent for them to accept. \n \n The refresh map button will allow you to refresh the map to display any new pins.</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="email">Please enter your email address</string>
    <string name="friend">Enter the email of the friend</string>
</resources>