<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.44" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="39dp"
            android:text="@string/background_section"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color"
            android:textSize="@dimen/aboutus_sections" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:text="@string/aboutus"
            android:textColor="@color/text_color2"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="19dp"
            android:text="@string/whoarewe_section"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_color"
            android:textSize="@dimen/aboutus_sections" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutus_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text_color"
            android:textSize="@dimen/aboutus_title" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/about_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_color2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:text="@string/aboutus2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_color2" />

    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="finishact"
        android:text="@string/done_button"
        android:textColor="@color/text_color" />

</LinearLayout>